# paper-al-quiz-generation-benchmark

./: .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE_GUIDE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docs-build.yml  docs-deploy.yml  docs.yml  on-merge.yml  pr-assign.yml  pr-checks.yml  test.yml
config/: .env.example  CoreData_benchmark.yaml  SE1_benchmark.yaml  SE2_benchmark.yaml  benchmark_example.yaml  minimal_benchmark.yaml
config/AIQuizzesConfigs/: Quiz1_benchmark.yaml  Quiz2_benchmark.yaml  Quiz3_benchmark.yaml  Quiz4_benchmark.yaml  Quiz5_benchmark.yaml  Quiz6_benchmark.yaml
data/inputs/: python_intro.md
data/instructions/: lists_and_recursion.json  mutability.json  threads_and_streams.json
data/instructions/AIQuizzes_instructions/: instruction_1.json  instruction_2.json  instruction_3.json  instruction_4.json  instruction_5.json  instruction_6.json
data/quizzes/: CoreDataQuiz.json  accuracy_quiz.json  coverage_quiz.json  example_quiz.json
data/quizzes/AIQuizzes_NoSource/: Quiz1.json  Quiz2.json  Quiz3.json  Quiz4.json  Quiz5.json  Quiz6.json
data/quizzes/ITP_SE1Quiz/: 01_VolcanoQuiz.json  02_SouthPoleQuiz.json  03_SpaceQuiz.json
data/quizzes/ITP_SE2Quiz/: 01_BirthdayQuiz.json  02_CarnivalQuiz.json  03_EasterQuiz.json
data/quizzes/ITP_Workshop/: W02Quiz.json  W03Quiz.json  W04Quiz.json  W05Quiz.json  W06Quiz.json  W07Quiz.json  W08Quiz.json  W09Quiz.json  W10Quiz.json  W13Quiz.json  W14Quiz.json
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md
src/: __init__.py
src/analysis/: __init__.py  aggregator.py  reporter.py
src/evaluators/: __init__.py  anthropic.py  azure_openai.py  base.py  factory.py  lm_studio.py  ollama.py  openai.py  openai_compatible.py
src/metrics/: __init__.py  accuracy.py  base.py  clarity.py  coverage.py  difficulty.py  distractor.py  grammatic.py  homogeneous_options.py  phase.py  registry.py
src/models/: __init__.py  config.py  instruction.py  quiz.py  result.py
src/runners/: __init__.py  benchmark.py
src/utils/: __init__.py  config_loader.py  io.py  logging_utils.py
tests/: __init__.py  conftest.py  test_analysis.py  test_config_loader.py  test_evaluator_factory.py  test_io.py  test_lm_studio_provider.py  test_metrics.py  test_models.py  test_ollama_provider.py  test_registry.py  test_reporter.py  test_runner.py
(+12 files in other folders)
